syntax = "proto3";

option java_package = "Server";


message Empty{}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string firstname = 3;
  string lastname = 4;
}
message UserRequest{
  int32 userId = 1;
}
message UpdateUserRequest{
  int32 userId = 1;
  string role = 2;
}

message LoginResponse {
  bool success = 1;
  int32 userId = 2;
  string fullName = 3;
  string role = 4;
}

message AllUsersResponse{ //Many 'Ingredient' messages | basically an array list?
  repeated User messages = 1;
}

message User {
  int32 userid = 1;
  string email = 2;
  string password = 3;
  string firstname = 4;
  string lastname = 5;
  string role = 6;
  }
message SingleUserResponse{
  int32 userid = 1;
  string email = 2;
  string firstname = 3;
  string lastname = 4;
  string role = 5;
}
message UpdateUserResponse{
  bool success = 1;
}
service UserService{
  rpc AttemptLogin(LoginRequest) returns (LoginResponse);
  rpc GetAllUsers(Empty) returns (AllUsersResponse);
  rpc AddUser(CreateUserRequest) returns (LoginResponse);
  rpc GetSingleUser(UserRequest) returns (SingleUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}